--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "@tailwindcss/forms": "^0.5.10",
         "@tailwindcss/typography": "^0.5.18",
         "@tailwindcss/vite": "^4.1.13",
+        "@testing-library/svelte": "^5.2.8",
         "@types/node": "^22",
         "@vitest/browser": "^3.2.4",
         "@vitest/coverage-v8": "^3.2.4",
