--- a/package.json
+++ b/package.json
@@ -55,6 +55,14 @@
         "vitest-browser-svelte": "^1.1.0"
     },
     "dependencies": {
+        "@types/d3": "^7.4.3",
+        "@types/d3-sankey": "^0.12.4",
+        "@types/three": "^0.180.0",
+        "d3": "^7.9.0",
+        "d3-sankey": "^0.12.3",
+        "three": "^0.180.0",
+        "vis-data": "^8.0.3",
+        "vis-network": "^10.0.2",
         "zod": "^4.1.12"
     }
 }
