--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
         "@types/three": "^0.180.0",
         "d3": "^7.9.0",
         "d3-sankey": "^0.12.3",
+        "lucide-svelte": "^0.468.0",
         "three": "^0.180.0",
         "vis-data": "^8.0.3",
         "vis-network": "^10.0.2",
